# django-api-project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dog_manager/: manage.py
dog_manager/dog_manager/: asgi.py  settings.py  urls.py  wsgi.py
dog_manager/pets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
dog_manager/pets/migrations/: 0001_initial.py  0002_alter_dog_breed.py
